# PhoenixSystems-IPv4-prefix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
IPv4_prefix_manager/: CMakeLists.txt  IPv4_prefix_manager.c  IPv4_prefix_manager.h
main/: CMakeLists.txt  main.c
src/: CMakeLists.txt  ipv4_func.c  ipv4_func.h  ipv4_structs.h
test/: CMakeLists.txt  test_IPv4.c  test_ipv4.c
